--- a/First Year/Second Semester/Web Technologies/Labs/Lab1/style.css
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab1/style.css
@@ -10,6 +10,8 @@ Culori:
 table,td,th{
     border: 1px solid #66FCF1;
     border-collapse: collapse;
+    text-align: center;
+    padding: 2px;
 }
 
 td{
@@ -51,7 +53,7 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
+}   
 
 section{
     border: 1px solid rgba(255,255,255,0.3);
@@ -68,4 +70,25 @@ ul{
 .ParagrafeNoutati{
     box-shadow:1px 1px 5px #66fc9b,-1px -1px 5px #66fc9b;
     text-shadow: red -1px 0;
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.parent{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 0px;
+    overflow: hidden;
+
+}
+
+figure:hover{
+    opacity: 100%;
+}
+
+figure{
+    opacity: 30%;
 }
